--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *.iml
 .gradle
+/.idea
+.idea
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -13,3 +15,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+/app/src/main/res/values/strings.xml
